chapter15/testapp/example1-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: testapp-policy-deny
 namespace: testapp
spec:
  {}
